references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/TransitionUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:2c82fa7bab5bee59fc5a3428d3af2ee134c4e38836e3bfcbc130bc91d28c1385
size 2248
